Social medial alignment issues fixed.

--- a/main.css
+++ b/main.css
@@ -132,7 +132,8 @@ p {
 
 .profile-social-links {
   width: 218px;
-  display: inline-block;
+  display: flex;
+  justify-content:space-around;
   float: right;
   margin: 0px;
   padding: 15px 20px;
